--- a/roles/create_certificates/tasks/main.yml
+++ b/roles/create_certificates/tasks/main.yml
@@ -29,6 +29,11 @@
     src: "{{ role_path }}/files/ca-config.json"
     dest: target/pki/ca-config.json
 
+- name: Copy ca-config-etcd.json
+  copy:
+    src: "{{ role_path }}/files/ca-config-etcd.json"
+    dest: target/pki/ca-config-etcd.json
+
 - name: Initializing CA
   shell: bin/cfssl gencert -initca target/pki/{{ item }}-csr.json | bin/cfssljson -bare target/pki/{{ item }}
   args:
@@ -74,17 +79,17 @@
     creates: target/pki/prometheus-adapter-custom-metrics.pem
 
 - name: Creating etcd certificate
-  shell: bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=server target/pki/etcd-csr.json | bin/cfssljson -bare target/pki/etcd/server
+  shell: bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config-etcd.json -profile=server target/pki/etcd-csr.json | bin/cfssljson -bare target/pki/etcd/server
   args:
     creates: target/pki/etcd/server.pem
 
 - name: Creating etcd client certificate
-  shell: bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=client target/pki/etcd-csr.json | bin/cfssljson -bare target/pki/etcd/etcd-client
+  shell: bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config-etcd.json -profile=client target/pki/etcd-csr.json | bin/cfssljson -bare target/pki/etcd/etcd-client
   args:
     creates: target/pki/etcd/etcd-client.pem
 
 - name: Creating etcd peer certificate
-  shell: bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=peer target/pki/etcd-csr.json | bin/cfssljson -bare target/pki/etcd/peer-{{ hostvars[item].inventory_hostname.split(".")[0] }}
+  shell: bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config-etcd.json -profile=peer target/pki/etcd-csr.json | bin/cfssljson -bare target/pki/etcd/peer-{{ hostvars[item].inventory_hostname.split(".")[0] }}
   args:
     creates: target/pki/etcd/peer-{{ hostvars[item].inventory_hostname.split(".")[0] }}.pem
   loop: "{{ groups.etcd|flatten(levels=1) }}"
