--- a/roles/fetch_existing_certificates/tasks/etcd.yaml
+++ b/roles/fetch_existing_certificates/tasks/etcd.yaml
@@ -1,5 +1,9 @@
 - name: Fetch Etcd certificates
-  include_tasks: "{{ role_path }}/tasks/fetch_if_exists.yaml"
+  #include_tasks: "{{ role_path }}/tasks/fetch_if_exists.yaml"
+  fetch:
+    src: "{{ src_path }}/{{ item }}"
+    dest: "{{ dest_path }}/"
+    flat: yes
   loop:
     - etcd-client.pem
     - etcd-client-key.pem
@@ -11,7 +15,11 @@
   run_once: true
 
 - name: Fetch Etcd peer-certificates
-  include_tasks: "{{ role_path }}/tasks/fetch_if_exists.yaml"
+  #include_tasks: "{{ role_path }}/tasks/fetch_if_exists.yaml"
+  fetch:
+    src: "{{ src_path }}/{{ item }}"
+    dest: "{{ dest_path }}/"
+    flat: yes
   loop:
     - "peer-{{ ansible_hostname }}.pem"
     - "peer-{{ ansible_hostname }}-key.pem"
