--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -65,7 +65,7 @@ scrape_configs:
     metrics_path: '/federate'
     params:
       'match[]':
-        - '{job="kubernetes-pods",kubernetes_namespace=""'
+        - '{job="kubernetes-pods",kubernetes_namespace=""}'
     scheme: https
     tls_config:
       insecure_skip_verify: true
